# instance-debootstrap

./: .gitignore  Makefile.am  NEWS  README  common.sh.in  configure.ac  create  defaults  export  import  parameters.list  rename  verify
devel/: release
examples/hooks/: defaultpasswords  extlinux  grub  hosts  interfaces  ssh-keys  timezone
test/: install-export-import
